--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
     <title>Angular App</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-  <my-app>loading</my-app>
+    <my-app>loading</my-app>
   </body>
 </html>
