5 files modified, 1 added, 2 deleted

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <my-app>loading</my-app>
+    <app-root>loading</app-root>
   </body>
 </html>
